@@ -1,5 +1,6 @@
 package com.ssafy.ourdoc.global.config;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Value;
@@ -12,19 +13,26 @@ import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 import com.ssafy.ourdoc.global.interceptor.JwtInterceptor;
 import com.ssafy.ourdoc.global.resolver.LoginArgumentResolver;
 
+import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 
 @Configuration
 @RequiredArgsConstructor
 public class WebConfig implements WebMvcConfigurer {
 	@Value("${prod.url}")
-	String prodUrl;
+	private String prodUrl;
+
+	@Value("${prod.excluded-paths}")
+	private String excludedPathsRaw;
 
 	private final LoginArgumentResolver loginArgumentResolver;
 	private final JwtInterceptor jwtInterceptor;
+	private List<String> excludedPaths;
 
-	private final List<String> excludedPaths = List.of("/teachers/signup", "/students/signup", "/users/signin",
-		"/users/signout", "/users/checkId", "/debate/**", "/openvidu/**");
+	@PostConstruct
+	public void init() {
+		excludedPaths = Arrays.asList(excludedPathsRaw.split(","));
+	}
 
 	@Override
 	public void addArgumentResolvers(List<HandlerMethodArgumentResolver> resolvers) {
